# ml-architectures

./: .gitignore  LICENSE  mint.json  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
docs/: _config.yml  about.md  index.md
docs/_posts/: 2026-02-05-welcome-to-ml-architectures-lab.md
docs/architectures/: clip.mdx  introduction.mdx
docs/images/: README.md
lab/: .gitignore
lab/layers/: transformer.py
lab/models/: seq2seq_transformer.py
lab/tasks/: translation_task.py
